fix some pages dimensions

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,8 @@
     transition-property: opacity ,background,transform ,filter;
     transition-timing-function: ease-in-out;
     transition-duration: 500ms;
+    width: 100% !important;
+    height: 100vh !important;
   }
   .page-transition {
     opacity: 0;
